samples/_failures_safe/1761334429_d0a81e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c59e78c6.c: In function ‘main’:
./samples/SAFE/__tmp_c59e78c6.c:171:12: error: missing terminating " character
  171 |     printf("Tokens found: %
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c59e78c6.c:171:5: error: expected expression at end of input
  171 |     printf("Tokens found: %
      |     ^~~~~~
./samples/SAFE/__tmp_c59e78c6.c:171:5: error: expected declaration or statement at end of input
